--- a/viewer3.html
+++ b/viewer3.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
-		<title>THREE.JS Example</title>
+		<title>web3dviewer 3</title>
 		<style type="text/css"> 
 			body {
 				color: #808080;
