--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Demonstration of <a href="http://code.google.com/p/web3dviewer/">web3dviewer</a>
 </p>
 
 <ul>
-<li><a href="viewer1.html"> Viewer 1 </a></li>
-<li><a href="viewer2.html"> Viewer 2 </a></li>
-<li><a href="viewer3.html"> Viewer 3 </a></li>
+<li><a href="viewer1.html"> Viewer 1 </a> - Demonstration uses CanvasRenderer and presents Walt Disney's head / Cube mesh</li>
+<li><a href="viewer2.html"> Viewer 2 </a> - Demonstration uses CanvasRenderer and presents progressive mesh (leg model) </li>
+<li><a href="viewer3.html"> Viewer 3 </a> - Demonstration chooses renderer (WebGL if possible) and presents Walt Disney's head / Cube mesh </li>
 </ul>
 </body>
 
