Cleaning and: - przesuwanie kamery (pod prawym klawiszem)

--- a/viewer2.html
+++ b/viewer2.html
@@ -24,10 +24,6 @@
 				top: 50px;
 			}
 			
-			#slider-horizontal {
-				width: 100px;
-			}
-			
 			#slider-vertical {
 				height: 150px;
 			}
@@ -53,11 +49,7 @@
 		<button onclick="Home(); return false;">Home View</button><br />
 		<button onclick="Inertia(); return false;">Trigger Inertia</button><br />
 		</td></tr>
-		<tr><td></td><td>
-		<div class="slider" id="slider-horizontal" tabIndex="1">
-			<input class="slider-input" id="slider-horizontal-input" name="slider-horizontal-input" />
-		</div>
-		</td></tr>
+	</table>
 	</div>
 	<script type="text/javascript" src="js/progressive.js"></script>
 	</body>
