--- a/viewer3.html
+++ b/viewer3.html
@@ -25,10 +25,6 @@
 				top: 50px;
 			}
 			
-			#slider-horizontal {
-				width: 100px;
-			}
-			
 			#slider-vertical {
 				height: 150px;
 			}
@@ -54,18 +50,8 @@
 		<button onclick="Inertia(); return false;">Trigger Inertia</button><br />
 		<button onclick="changeMesh(); return false;">Change Mesh</button>
 		</td></tr>
-		<tr><td></td><td>
-		<div class="slider" id="slider-horizontal" tabIndex="1">
-			<input class="slider-input" id="slider-horizontal-input" name="slider-horizontal-input" />
-		</div>
-		</td></tr>
+	</table>
 	</div>
-	<!--<form>
-	slowRotationX: <input type="text" id="slowRotationX">
-	slowRotationY: <input type="text" id="slowRotationY">
-	targetRotationX: <input type="text" id="targetRotationX">
-	targetRotationY: <input type="text" id="targetRotationY">
-	</form>-->
 	<script type="text/javascript" src="js/presentation3.js"></script>
 	</body>
 </html>
