Button to checkbox

--- a/viewer1.html
+++ b/viewer1.html
@@ -73,8 +73,8 @@
 					</td></td>
 					</tr>	
 				</table>
-		<button onclick="Home(); return false;">Home View</button><br />
-		<button onclick="Inertia(); return false;">Inertia</button><br />
+		<button onclick="Home(); return false;">Reset view</button><br />
+		Inertia: <input type="checkbox" name="inertia" onclick="Inertia(); "><br />
 		</td></tr>
 	</table>
 	</div>
