src/presentation.js works with both progressive and standard meshes

--- a/viewer1.html
+++ b/viewer1.html
@@ -42,12 +42,11 @@
 		<script type="text/javascript" src="js/range.js"></script>
 		<script type="text/javascript" src="js/slider.js"></script>
 		<script type="text/javascript" src="js/timer.js"></script>
-
-
+		<script type="text/javascript" src="src/presentation.js"></script>
+		
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body>
-<body>
+	<body onload="init(false); animate();">
 <h1>web3dviewer</h1>
 <p>Demonstration example number 1</p>
 <div id="web3dviewer" style="position: absolute; top: 100px;">
@@ -77,11 +76,11 @@
 		Inertia: <input type="checkbox" name="inertia" onclick="Inertia(); "><br />
 		</td></tr>
 	</table>
+
 	</div>
 
 
 </div>
-	<script type="text/javascript" src="js/presentation.js"></script>
 
 	</body>
 </html>
