--- a/viewer2.html
+++ b/viewer2.html
@@ -1,17 +1,17 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
-		<title>web3dviewer 2</title>
+		<title>web3dviewer 1</title>
 		<style type="text/css"> 
 			body {
 				color: #808080;
 				font-family:Monospace;
 				font-size:13px;
-				text-align:center;
+				/*text-align:center;*/
 
 				background-color: #ffffff;
-				margin: 0px;
-				overflow: hidden;
+				/*margin: 0px;*/
+				/*overflow: hidden;*/
 			}
 
 			#info {
@@ -19,15 +19,21 @@
 				top: 0px; width: 100%;
 				padding: 5px;
 			}
-			#panel {
-				position: absolute;
-				top: 50px;
-			}
 			
+			#panel {
+				position: relative;
+				float: left;
+				top: 50px;
+				z-index: 10;
+			}
+
 			#slider-vertical {
 				height: 180px;
 			}
                 </style>
+
+
+<!--  This should be moved into Javascript function similar to github.com/mrdoob/stats.js -->
 		<script type="text/javascript" src="js/Three.js"></script>
 		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
 		<script type="text/javascript" src="js/refineMesh.js"></script>
@@ -36,12 +42,17 @@
 		<script type="text/javascript" src="js/range.js"></script>
 		<script type="text/javascript" src="js/slider.js"></script>
 		<script type="text/javascript" src="js/timer.js"></script>
-		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
+		<script type="text/javascript" src="src/presentation.js"></script>
 		
+		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body>
-<body>
-	<div id="panel">
+	<body onload="init(true); animate();">
+<h1>web3dviewer</h1>
+<p>Demonstration example number 2</p>
+<div id="web3dviewer" style="position: absolute; top: 100px;">
+
+<!-- This should be moved into Javascript function similar to github.com/mrdoob/stats.js/ --> 
+	<div style="" id="panel">
 	<table>
 		<tr>
 			<td><div class="slider" id="slider-vertical" tabIndex="1">
@@ -61,11 +72,15 @@
 					</td></td>
 					</tr>	
 				</table>
-		<button onclick="Home(); return false;">Home View</button><br />
-		<button onclick="Inertia(); return false;">Trigger Inertia</button><br />
+		<button onclick="Home(); return false;">Reset view</button><br />
+		Inertia: <input type="checkbox" name="inertia" onclick="Inertia(); "><br />
 		</td></tr>
 	</table>
+
 	</div>
-	<script type="text/javascript" src="js/progressive.js"></script>
+
+
+</div>
+
 	</body>
 </html>
