step forward to the single <div>

--- a/viewer1.html
+++ b/viewer1.html
@@ -32,18 +32,6 @@
 			}
                 </style>
 
-
-<!--  This should be moved into Javascript function similar to github.com/mrdoob/stats.js -->
-		<script type="text/javascript" src="js/Three.js"></script>
-		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="js/refineMesh.js"></script>
-		<script type="text/javascript" src="js/loadBaseMesh.js"></script>
-		<script type="text/javascript" src="js/Stats.js"></script>
-		<script type="text/javascript" src="js/range.js"></script>
-		<script type="text/javascript" src="js/slider.js"></script>
-		<script type="text/javascript" src="js/timer.js"></script>
-		<script type="text/javascript" src="src/presentation.js"></script>
-		
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
 	<body onload="init(false); animate();">
@@ -81,6 +69,7 @@
 
 
 </div>
+	<script type="text/javascript" src="build/web3dviewer.js"></script>
 
 	</body>
 </html>
