Remember to use only web3dviewer.js

--- a/viewer2.html
+++ b/viewer2.html
@@ -31,18 +31,6 @@
 				height: 180px;
 			}
                 </style>
-
-
-<!--  This should be moved into Javascript function similar to github.com/mrdoob/stats.js -->
-		<script type="text/javascript" src="js/Three.js"></script>
-		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="js/refineMesh.js"></script>
-		<script type="text/javascript" src="js/loadBaseMesh.js"></script>
-		<script type="text/javascript" src="js/Stats.js"></script>
-		<script type="text/javascript" src="js/range.js"></script>
-		<script type="text/javascript" src="js/slider.js"></script>
-		<script type="text/javascript" src="js/timer.js"></script>
-		<script type="text/javascript" src="src/presentation.js"></script>
 		
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
@@ -81,6 +69,6 @@
 
 
 </div>
-
+	<script type="text/javascript" src="build/web3dviewer.js"></script>
 	</body>
 </html>
