--- a/viewer3.html
+++ b/viewer3.html
@@ -29,14 +29,7 @@
 				height: 180px;
 			}
                 </style>
-		<script type="text/javascript" src="js/Three.js"></script>
-		<script type="text/javascript" src="js/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="js/refineMesh.js"></script>
-		<script type="text/javascript" src="js/loadBaseMesh.js"></script>
-		<script type="text/javascript" src="js/Stats.js"></script>
-		<script type="text/javascript" src="js/range.js"></script>
-		<script type="text/javascript" src="js/slider.js"></script>
-		<script type="text/javascript" src="js/timer.js"></script>
+
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
 	<body>
@@ -63,10 +56,9 @@
 				</table>
 		<button onclick="Home(); return false;">Home View</button><br />
 		<button onclick="Inertia(); return false;">Trigger Inertia</button><br />
-		<button onclick="changeMesh(); return false;">Change Mesh</button>
 		</td></tr>
 	</table>
 	</div>
-	<script type="text/javascript" src="js/presentation3.js"></script>
+	<script type="text/javascript" src="build/web3dviewer.js"></script>
 	</body>
 </html>
