--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Demonstration of <a href="http://code.google.com/p/web3dviewer/">web3dviewer</a>
 <li><a href="viewer1.html"> Viewer 1 </a> - Demonstration uses CanvasRenderer and presents Walt Disney's head / Cube mesh</li>
 <li><a href="viewer2.html"> Viewer 2 </a> - Demonstration uses CanvasRenderer and presents progressive mesh (leg model) </li>
 <li><a href="viewer3.html"> Viewer 3 </a> - Demonstration chooses renderer (WebGL if possible) and presents Walt Disney's head / Cube mesh </li>
+<li><a href="viewer3.html"> Viewer 3 </a> - Two independent web3dviewer components in single window. </li>
 </ul>
 </body>
 
