--- a/viewer1.html
+++ b/viewer1.html
@@ -34,7 +34,7 @@
 
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body onload="vc = new viewController(); vc.init(false); vc.animate();">
+	<body onload="init(false); animate();">
 <h1>web3dviewer</h1>
 <p>Demonstration example number 1</p>
 <div id="web3dviewer" style="position: absolute; top: 100px;">
@@ -60,8 +60,8 @@
 					</td></td>
 					</tr>	
 				</table>
-		<button onclick="vc.Home(); return false;">Reset view</button><br />
-		Inertia: <input type="checkbox" name="inertia" onclick="vc.Inertia(); "><br />
+		<button onclick="Home(); return false;">Reset view</button><br />
+		Inertia: <input type="checkbox" name="inertia" onclick="Inertia(); "><br />
 		</td></tr>
 	</table>
 
