--- a/viewer4.html
+++ b/viewer4.html
@@ -27,6 +27,7 @@
 				z-index: 10;
 			}
 
+
 			#slider-vertical {
 				height: 180px;
 			}
@@ -34,12 +35,13 @@
 
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body onload="init(false); animate();">
+	<body onload="vc = new viewController('web3dviewer','cube'); vc.init(); vc1 = new viewController('web3dviewer1','cube'); vc1.init(); animate();">
 <h1>web3dviewer</h1>
-<p>Demonstration example number 1</p>
-<div id="web3dviewer" style="position: absolute; top: 100px;">
+<p>Demonstration example number 4</p>
+<div id="web3dviewer" style="width: 200px; height: 200px;">
+ble ble
 
-<!-- This should be moved into Javascript function similar to github.com/mrdoob/stats.js/ --> 
+<!-- This should be moved into Javascript function similar to github.com/mrdoob/stats.js/ 
 	<div style="" id="panel">
 	<table>
 		<tr>
@@ -67,9 +69,36 @@
 
 	</div>
 
-
+-->
 </div>
-	<script type="text/javascript" src="build/web3dviewer.js"></script>
+
+<div id="web3dviewer1"  style="width: 200px; height: 200px;">
+ble ble
+</div>
+
+<!--
+<div id="web3dviewer2" style="position: absolute; top: 100px;"></div>
+'libs/Three.js',
+'libs/range.js',
+'libs/RequestAnimationFrame.js',
+'libs/slider.js',
+'libs/Stats.js',
+'libs/timer.js',
+'viewController.js',
+'refineMesh.js',
+'loadBaseMesh.js'
+-->
+
+
+<script type="text/javascript" src="src/libs/Three.js"></script>
+<script type="text/javascript" src="src/libs/range.js"></script>
+<script type="text/javascript" src="src/libs/Stats.js"></script>
+<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="src/libs/slider.js"></script>
+<script type="text/javascript" src="src/libs/timer.js"></script>
+<script type="text/javascript" src="src/ooviewController.js"></script>
+
+
 
 	</body>
 </html>
