--- a/viewer4.html
+++ b/viewer4.html
@@ -35,12 +35,10 @@
 
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body onload="vc = new viewController('web3dviewer','cube'); vc.init(); vc1 = new viewController('web3dviewer1','cube'); vc1.init(); animate();">
+	<body onload="init();">
 <h1>web3dviewer</h1>
 <p>Demonstration example number 4</p>
 <div id="web3dviewer" style="width: 200px; height: 200px;">
-ble ble
-
 <!-- This should be moved into Javascript function similar to github.com/mrdoob/stats.js/ 
 	<div style="" id="panel">
 	<table>
@@ -73,7 +71,6 @@ ble ble
 </div>
 
 <div id="web3dviewer1"  style="width: 200px; height: 200px;">
-ble ble
 </div>
 
 <!--
