--- a/viewer4.html
+++ b/viewer4.html
@@ -36,7 +36,7 @@
 
 <div class="web3dviewer" id="web3dviewer2" mesh="leg" style="position: absolute; top: 100px; left: 220px; width: 200px; height: 200px; "></div>
 
-<div class="web3dviewer" id="web3dviewer3" mesh="disney" style="position: absolute; top: 320px; width: 200px; height: 200px;"></div>
+<div class="web3dviewer" id="web3dviewer3" mesh="arm" style="position: absolute; top: 320px; width: 200px; height: 200px;"></div>
 
 <div class="web3dviewer" id="web3dviewer4" mesh="cube" style="position: absolute; top: 320px; left: 220px; width: 300px; height: 300px;"></div>
 
