--- a/viewer5.html
+++ b/viewer5.html
@@ -32,7 +32,7 @@
 <h1>web3dviewer</h1>
 <p>Object-oriented component does not pollute global namespace.</p>
 
-<div class="web3dviewer" mesh="head-infinitylevel" style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<div class="web3dviewer" mesh="head" style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
 
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
