--- a/viewer2.html
+++ b/viewer2.html
@@ -1,74 +1,42 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
-		<title>web3dviewer 1</title>
-		<style type="text/css"> 
-			body {
-				color: #808080;
-				font-family:Monospace;
-				font-size:13px;
-				/*text-align:center;*/
+		<title>web3dviewer 2</title>
+                <style type="text/css"> 
+                        body {
+                                color: #808080;
+                                font-family:Monospace;
+                                font-size:13px;
+                                /*text-align:center;*/
 
-				background-color: #ffffff;
-				/*margin: 0px;*/
-				/*overflow: hidden;*/
-			}
+                                background-color: #ffffff;
+                                /*margin: 0px;*/
+                                /*overflow: hidden;*/
+                        }
 
-			#info {
-				position: absolute;
-				top: 0px; width: 100%;
-				padding: 5px;
-			}
-			
-			#panel {
-				position: relative;
-				float: left;
-				top: 50px;
-				z-index: 10;
-			}
-
-			#slider-vertical {
-				height: 180px;
-			}
+                        #info {
+                                position: absolute;
+                                top: 0px; width: 100%;
+                                padding: 5px;
+                        }
                 </style>
-		
-		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
+
+                <link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
-	<body onload="init(true); animate();">
+	<body onload="web3dviewer_init();">
 <h1>web3dviewer</h1>
 <p>Demonstration example number 2</p>
-<div id="web3dviewer" style="position: absolute; top: 100px;">
-
-<!-- This should be moved into Javascript function similar to github.com/mrdoob/stats.js/ --> 
-	<div style="" id="panel">
-	<table>
-		<tr>
-			<td><div class="slider" id="slider-vertical" tabIndex="1">
-				<input class="slider-input" id="slider-vertical-input" name="slider-vertical-input" />
-			</div></td>
-			<td><table><tr>
-					<td></td>
-					<td><button onclick="moveCamera('up'); return false;">&uarr;</button></td>
-					<td></td>
-					</tr><tr>
-					<td><button onclick="moveCamera('left'); return false;">&larr;</button></td>
-					<td></td>
-					<td><button onclick="moveCamera('right'); return false;">&rarr;</button></td>
-					</tr><tr>
-					<td></td>
-					<td><button onclick="moveCamera('down'); return false;">&darr;</button></td>
-					</td></td>
-					</tr>	
-				</table>
-		<button onclick="Home(); return false;">Reset view</button><br />
-		Inertia: <input type="checkbox" name="inertia" onclick="Inertia(); "><br />
-		</td></tr>
-	</table>
-
-	</div>
-
-
-</div>
-	<script type="text/javascript" src="build/web3dviewer.js"></script>
+<div class="web3dviewer" mesh="leg" progressive="true" style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<script type="text/javascript" src="src/libs/Three.js"></script>
+<script type="text/javascript" src="src/libs/range.js"></script>
+<script type="text/javascript" src="src/libs/Stats.js"></script>
+<script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="src/libs/slider.js"></script>
+<script type="text/javascript" src="src/libs/timer.js"></script>
+<script type="text/javascript" src="src/ooviewController.js"></script>
+<script type="text/javascript" src="src/loadBaseMesh.js"></script>
+<script type="text/javascript" src="src/refineMesh.js"></script>
+<script type="text/javascript" src="src/global.js"></script>
 	</body>
 </html>
