--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Demonstration of <a href="http://code.google.com/p/web3dviewer/">web3dviewer</a>
 <li><a href="viewer3.html"> Viewer 3 </a> - Demonstration chooses renderer (WebGL if possible) and presents Walt Disney's head / Cube mesh </li>
 <li><a href="viewer4.html"> Viewer 4 </a> - Four independent web3dviewer components in single window. </li>
 <li><a href="viewer5.html"> Viewer 5 </a> - Single OO web3dviewer component. </li>
+<li><a href="viewer6.html"> Viewer 6 </a> - One object, two connected components. </li>
 </ul>
 </body>
 
