--- a/viewer4.html
+++ b/viewer4.html
@@ -28,13 +28,13 @@
 <h1>web3dviewer</h1>
 <p>Four independent components</p>
 
-<div class="web3dviewer" id="web3dviewer1" mesh="cube" style="position: absolute; top: 100px; width: 150; height: 150px; "></div>
+<div class="web3dviewer" id="web3dviewer1" mesh="box" style="position: absolute; top: 100px; width: 150; height: 150px; "></div>
 
 <div class="web3dviewer" id="web3dviewer2" mesh="leg" style="position: absolute; top: 100px; left: 220px; width: 200px; height: 200px; "></div>
 
 <div class="web3dviewer" id="web3dviewer3" mesh="arm" style="position: absolute; top: 320px; width: 200px; height: 200px;"></div>
 
-<div class="web3dviewer" id="web3dviewer4" mesh="cube" style="position: absolute; top: 320px; left: 220px; width: 300px; height: 300px;"></div>
+<div class="web3dviewer" id="web3dviewer4" mesh="box" progressive style="position: absolute; top: 320px; left: 220px; width: 300px; height: 300px;"></div>
 
 
 
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="src/libs/timer.js"></script>
 <script type="text/javascript" src="src/ooviewController.js"></script>
 <script type="text/javascript" src="src/loadBaseMesh.js"></script>
+<script type="text/javascript" src="src/refineMesh.js"></script>
 <script type="text/javascript" src="src/global.js"></script>
 
 
