Teraz siatka się centruje

--- a/viewer2.html
+++ b/viewer2.html
@@ -27,7 +27,7 @@
 	<body onload="web3dviewer_init();">
 <h1>web3dviewer</h1>
 <p>Demonstration example number 2</p>
-<div class="web3dviewer" mesh="arm" progressive noinertia style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<div class="web3dviewer" mesh="hinge" progressive noinertia style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
 <script type="text/javascript" src="src/libs/Stats.js"></script>
