--- a/viewer5.html
+++ b/viewer5.html
@@ -27,7 +27,7 @@
 <h1>web3dviewer</h1>
 <p>Object-oriented component does not pollute global namespace.</p>
 
-<div class="web3dviewer" mesh="head" style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<div class="web3dviewer" mesh="hinge" progressive style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
 
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
@@ -37,6 +37,7 @@
 <script type="text/javascript" src="src/libs/timer.js"></script>
 <script type="text/javascript" src="src/ooviewController.js"></script>
 <script type="text/javascript" src="src/loadBaseMesh.js"></script>
+<script type="text/javascript" src="src/refineMesh.js"></script>
 <script type="text/javascript" src="src/global.js"></script>
 
 
