--- a/viewer6.html
+++ b/viewer6.html
@@ -27,8 +27,8 @@
 <h1>web3dviewer</h1>
 <p>One object, two connected components.</p>
 
-<div class="web3dviewer" id="master0" mesh="box" progressive noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
-<div class="web3dviewer" mesh="box" master="master0" noprogressive noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" id="master0" mesh="head" view="front" noprogressive noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" mesh="head" master="master0" view="top" noprogressive noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
 
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
