--- a/viewer1.html
+++ b/viewer1.html
@@ -38,7 +38,7 @@
 <h1>web3dviewer</h1>
 <p>Demonstration example number 1</p>
 
-<div class="web3dviewer" mesh="box" view="front" noprogressive noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" mesh="box" view="front" progressive inertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
 
 	</div>
 
