--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ Demonstration of <a href="http://code.google.com/p/web3dviewer/">web3dviewer</a>
 </p>
 
 <ul>
-<li><a href="viewer1.html"> Viewer 1 </a> - Demonstration uses CanvasRenderer and presents Walt Disney's head / Cube mesh</li>
-<li><a href="viewer2.html"> Viewer 2 </a> - Demonstration uses CanvasRenderer and presents progressive mesh (leg model) </li>
-<li><a href="viewer3.html"> Viewer 3 </a> - Demonstration chooses renderer (WebGL if possible) and presents Walt Disney's head / Cube mesh </li>
-<li><a href="viewer4.html"> Viewer 4 </a> - Four independent web3dviewer components in single window. </li>
-<li><a href="viewer5.html"> Viewer 5 </a> - Single OO web3dviewer component. </li>
-<li><a href="viewer6.html"> Viewer 6 </a> - One object, two connected components. </li>
+<li><a href="viewer1.html"> Demo 1 </a> - Basic usage. Simple box mesh with inertia.</li>
+<li><a href="viewer2.html"> Demo 2 </a> - Hinge model (9000 faces). Progressive, noinertia.</li>
+<li><a href="viewer3.html"> Demo 3 </a> - Two independent components. Hinge and arm models. </li>
+<li><a href="viewer4.html"> Demo 4 </a> - Four independent components. </li>
+<li><a href="viewer5.html"> Demo 5 </a> - One object, two connected components. </li>
+<li><a href="viewer6.html"> Demo 6 </a> - Three views at once. </li>
 </ul>
 </body>
 
