--- a/viewer1.html
+++ b/viewer1.html
@@ -3,42 +3,24 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
 		<title>web3dviewer 1</title>
 		<style type="text/css"> 
-			body {
-				color: #808080;
-				font-family:Monospace;
-				font-size:13px;
-				/*text-align:center;*/
-
-				background-color: #ffffff;
-				/*margin: 0px;*/
-				/*overflow: hidden;*/
-			}
-
-			#info {
-				position: absolute;
-				top: 0px; width: 100%;
-				padding: 5px;
-			}
-			
-			#panel {
-				position: relative;
-				float: left;
-				top: 50px;
-				z-index: 10;
-			}
-
-			#slider-vertical {
-				height: 180px;
+			pre {
+//				color: #808080;
+//				font-family:Monospace;
+//				font-size:13px;
+				background-color: #808080;
 			}
                 </style>
 
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
 	<body onload="web3dviewer_init();">
-<h1>web3dviewer</h1>
-<p>Demonstration example number 1</p>
-
-<div class="web3dviewer" mesh="box" view="front" progressive inertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
+<h3>web3dviewer, demo 1: simple box</h3>
+<pre style="background-color: #dddddd;">
+&lt;body onload="web3dviewer_init();"&gt;
+&lt;script type="text/javascript" src="build/web3dviewer.js"&gt;&lt;/script&gt;
+&lt;div class="web3dviewer" mesh="box"&gt;&lt;/div&gt;
+</pre>
+<div class="web3dviewer" mesh="box" style="position: absolute; top: 130px; width: 400px; height: 500px; " ></div>
 
 	</div>
 
