--- a/viewer2.html
+++ b/viewer2.html
@@ -3,31 +3,17 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
 		<title>web3dviewer 2</title>
-                <style type="text/css"> 
-                        body {
-                                color: #808080;
-                                font-family:Monospace;
-                                font-size:13px;
-                                /*text-align:center;*/
-
-                                background-color: #ffffff;
-                                /*margin: 0px;*/
-                                /*overflow: hidden;*/
-                        }
-
-                        #info {
-                                position: absolute;
-                                top: 0px; width: 100%;
-                                padding: 5px;
-                        }
-                </style>
 
                 <link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
 	<body onload="web3dviewer_init();">
-<h1>web3dviewer</h1>
-<p>Demonstration example number 2</p>
-<div class="web3dviewer" mesh="hinge" progressive noinertia style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<h3>web3dviewer, demo 2: hinge</h3>
+<pre style="background-color: #dddddd;">
+&lt;body onload="web3dviewer_init();"&gt;
+&lt;script type="text/javascript" src="build/web3dviewer.js"&gt;&lt;/script&gt;
+&lt;div class="web3dviewer" mesh="hinge" <b>noinertia</b>&gt;&lt;/div&gt;
+</pre>
+<div class="web3dviewer" mesh="hinge" progressive noinertia style="position: absolute; top: 120px; width: 600px; height: 500px; "></div>
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
 <script type="text/javascript" src="src/libs/Stats.js"></script>
