--- a/viewer5.html
+++ b/viewer5.html
@@ -3,31 +3,22 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
 		<title>web3dviewer 5</title>
 		<style type="text/css"> 
-			body {
-				color: #808080;
-				font-family:Monospace;
-				font-size:13px;
-				/*text-align:center;*/
 
-				background-color: #ffffff;
-				/*margin: 0px;*/
-				/*overflow: hidden;*/
-			}
-
-			#info {
-				position: absolute;
-				top: 0px; width: 100%;
-				padding: 5px;
-			}
                 </style>
 
 		<link rel="StyleSheet" type="text/css" href="css/bluecurve.css" />
 	</head>
 	<body onload="web3dviewer_init();">
-<h1>web3dviewer</h1>
-<p>Object-oriented component does not pollute global namespace.</p>
 
-<div class="web3dviewer" mesh="hinge" noinertia progressive style="position: absolute; top: 100px; width: 600px; height: 500px; "></div>
+<h3>web3dviewer, demo 5: connected compoments</h3>
+<pre style="background-color: #dddddd;">
+&lt;div class="web3dviewer" <b>id="master" mesh="arm"</b>>&gt;&lt;/div&gt;</b>
+&lt;div class="web3dviewer" <b>master="master"</b>&gt;&lt;/div&gt;</b>
+</pre>
+
+
+<div class="web3dviewer" id="master0" mesh="arm" noprogressive noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" mesh="arm" master="master0" noprogressive noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
 
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
