still dont work

--- a/viewer5.html
+++ b/viewer5.html
@@ -17,8 +17,8 @@
 </pre>
 
 
-<div class="web3dviewer" id="master0" mesh="arm" noprogressive noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
-<div class="web3dviewer" mesh="arm" master="master0" noprogressive noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" id="master0" mesh="arm" noinertia style="position: absolute; top: 100px; width: 400px; height: 500px; "></div>
+<div class="web3dviewer" master="master0" noprogressive noinertia style="position: absolute; left: 500px; top: 100px; width: 400px; height: 500px; "></div>
 
 <script type="text/javascript" src="src/libs/Three.js"></script>
 <script type="text/javascript" src="src/libs/range.js"></script>
