--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
 <h3>web3dviewer</h3>
 
 <p>
-Demonstration of <a href="http://code.google.com/p/web3dviewer/">web3dviewer</a> component.
+<pre>web3dviewer</pre> is flexible JavaScript component for efficient, convenient and easy presentation of 3D objects using modern web-browser technologies. The <a href=" <a href="http://code.google.com/p/web3dviewer/"> source code is published under the LGPL licence</a>.
 </p>
 
 <ul>
 <li><a href="viewer1.html"> Demo 1 </a> - Basic usage. Simple box mesh with inertia.</li>
-<li><a href="viewer2.html"> Demo 2 </a> - Hinge model (9000 faces). Progressive, noinertia.</li>
+<li><a href="viewer2.html"> Demo 2 </a> - Hinge model (9000 faces). Progressive, noinertia. <b>Test your device performace.</b></li>
 <li><a href="viewer3.html"> Demo 3 </a> - Two independent components. Hinge and arm models. </li>
 <li><a href="viewer4.html"> Demo 4 </a> - Four independent components. </li>
 <li><a href="viewer5.html"> Demo 5 </a> - One object, two connected components. </li>
 <li><a href="viewer6.html"> Demo 6 </a> - Three views at once. </li>
 </ul>
 </body>
+
+
 
 </html>
