--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h3>web3dviewer</h3>
 
 <p>
-<pre>web3dviewer</pre> is flexible JavaScript component for efficient, convenient and easy presentation of 3D objects using modern web-browser technologies. The <a href=" <a href="http://code.google.com/p/web3dviewer/"> source code is published under the LGPL licence</a>.
+<i>web3dviewer</i> is flexible JavaScript component for efficient, convenient and easy presentation of 3D objects using modern web-browser technologies. The <a href="http://code.google.com/p/web3dviewer/"> source code </a> is published under the LGPL licence</a>.
 </p>
 
 <ul>
@@ -16,8 +16,10 @@
 <li><a href="viewer5.html"> Demo 5 </a> - One object, two connected components. </li>
 <li><a href="viewer6.html"> Demo 6 </a> - Three views at once. </li>
 </ul>
-</body>
 
+
+</body>
+</html>
 
 
 </html>
