--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h3>web3dviewer</h3>
 
 <p>
-<i>web3dviewer</i> is flexible JavaScript component for efficient, convenient and easy presentation of 3D objects using modern web-browser technologies. The <a href="http://code.google.com/p/web3dviewer/"> source code </a> is published under the LGPL licence</a>.
+<i>web3dviewer</i> is flexible JavaScript component for efficient, convenient and easy presentation of 3D objects using modern web-browser technologies. <br/>The <a href="http://code.google.com/p/web3dviewer/"> source code </a> is published under the MIT licence</a>.
 </p>
 
 <ul>
@@ -17,9 +17,11 @@
 <li><a href="viewer6.html"> Demo 6 </a> - Three views at once. </li>
 </ul>
 
+<p><i>Special greetings for participants of <a href="http://esco2012.femhub.com/">ESCO 2012</a> conference.</i></p> 
 
+<hr>
+<small>Powered by <a href="https://github.com/mrdoob/three.js/">Three.js</a> & HTML 5, Copyright (c) 2011-2012.
+</small>
 </body>
 </html>
 
-
-</html>
