--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <ul>
 <li><a href="viewer1.html"> Demo 1 </a> - Basic usage. Simple box mesh with inertia.</li>
-<li><a href="viewer2.html"> Demo 2 </a> - Hinge model (9000 faces). Progressive, noinertia. <b>Test your device performace.</b></li>
+<li><a href="viewer2.html"> Demo 2 </a> - Hinge model (9000 faces). Progressive, noinertia. <b>Test your device performance.</b></li>
 <li><a href="viewer3.html"> Demo 3 </a> - Two independent components. Hinge and arm models. </li>
 <li><a href="viewer4.html"> Demo 4 </a> - Four independent components. </li>
 <li><a href="viewer5.html"> Demo 5 </a> - One object, two connected components. </li>
