Dodany kolejny (siodmy) przyklad. Bedzie to test streamingu przez VNC

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <li><a href="viewer4.html"> Demo 4 </a> - Four independent components. </li>
 <li><a href="viewer5.html"> Demo 5 </a> - One object, two connected components. </li>
 <li><a href="viewer6.html"> Demo 6 </a> - Three views at once. </li>
+<li><a href="viewer7.html"> Demo 7 </a> - Hinge model (9000 faces). No progressive. For streaming comparision. </li>
 </ul>
 
 <p><i>Special greetings for participants of <a href="http://esco2012.femhub.com/">ESCO 2012</a> conference.</i></p> 
