New multitouch support (zooming and panning) Slider replace by buttons +/-

--- a/viewer2.html
+++ b/viewer2.html
@@ -18,7 +18,7 @@ Hinge model contains 9000 faces. Mesh loading will stop when renderer drops belo
 <script type="text/javascript" src="src/libs/range.js"></script>
 <script type="text/javascript" src="src/libs/Stats.js"></script>
 <script type="text/javascript" src="src/libs/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="src/libs/slider.js"></script>
+<!--<script type="text/javascript" src="src/libs/slider.js"></script>-->
 <script type="text/javascript" src="src/libs/timer.js"></script>
 <script type="text/javascript" src="src/ooviewController.js"></script>
 <script type="text/javascript" src="src/loadBaseMesh.js"></script>
